# CanViT-pretrain

./: .envrc.example  .envrc.grete  .gitignore  CLAUDE.md  IN21K.md  README.md  SA1B_TRAINING.md  SLURM.md  justfile  main.py  pyproject.toml
_setup_v100/: README.md  setup.sh
avp/model/: __init__.py  test.py
avp_vit/: __init__.py
avp_vit/active/: __init__.py
avp_vit/attention/: __init__.py  test.py
avp_vit/attention/convex/: __init__.py  test.py
avp_vit/backbone/: __init__.py
avp_vit/backbone/dinov3/: __init__.py  test.py
avp_vit/backbone/ijepa/: __init__.py  test.py
avp_vit/backbone/protocol/: __init__.py
avp_vit/checkpoint/: __init__.py  test.py
avp_vit/glimpse/: __init__.py  test.py
avp_vit/model/: __init__.py  test.py
avp_vit/rope/: __init__.py  test.py
avp_vit/train/: __init__.py  config.py  data.py  feature_dataset.py  loop.py  model.py  norm.py  step.py  test.py  viewpoint.py
avp_vit/train/data/: __init__.py
avp_vit/train/norm/: __init__.py  test.py
avp_vit/train/probe/: __init__.py
avp_vit/train/state/: __init__.py  test.py
avp_vit/train/viewpoint/: __init__.py  test.py
avp_vit/train/viz/: __init__.py  _core.py  policy.py  sample.py  test.py  train_viz.py  validate.py
avp_vit/train_gaussians/: __init__.py  config.py
canvit/: __init__.py  pyproject.toml  test.py
canvit/attention/: __init__.py  test.py
canvit/backbone/: __init__.py  dinov3.py
canvit/rope/: __init__.py  test.py
canvit_eval/: __init__.py  policies.py  test_policies.py  utils.py
canvit_eval/ade20k/: __init__.py  __main__.py
canvit_eval/ade20k/analyze/: __init__.py  test.py
canvit_eval/ade20k/dataset/: __init__.py  test.py
canvit_eval/ade20k/eval_dinov3_probe/: __init__.py
canvit_eval/ade20k/evaluate/: __init__.py
canvit_eval/ade20k/probe/: __init__.py  test.py
canvit_eval/ade20k/slurm/: eval_ade20k_dinov3_probe.sbatch  eval_ade20k_policy.sbatch  train_ade20k_dinov3_probe.sbatch
canvit_eval/ade20k/train_dinov3_probe/: __init__.py
canvit_eval/ade20k/train_probe/: __init__.py  features.py  test.py
canvit_eval/ade20k/viz/: __init__.py
canvit_eval/in1k/: __init__.py  __main__.py
canvit_eval/in1k/evaluate/: __init__.py  test.py
canvit_eval/metrics/: __init__.py  test.py
canvit_eval/reconstruction/: __init__.py  __main__.py
canvit_flops/: __init__.py  test.py
canvit_pretrain/: __init__.py
canvit_pretrain/checkpoint/: __init__.py  test.py
canvit_pretrain/datasets/: indexed_image_folder.py
canvit_pretrain/train/: __init__.py  __main__.py  config.py  dist.py  loop.py  model.py  probe.py  step.py  test.py  test_step.py  test_viewpoint_scale.py  tracker.py  transforms.py  viewpoint.py
canvit_pretrain/train/data/: __init__.py  schedule.py  shards.py  tar_images.py  webdataset.py
canvit_pretrain/train/viz/: __init__.py  comet.py  disk.py  foveated_plot.py  image.py  plot.py  sample.py  test.py  validate.py
claude_docs/: webdataset-ddp-and-tracker.md  webdataset-loader-and-ddp.md
claude_docs/doc_changes/: ddp.md  tracker.md  webdataset.md
claude_docs/documentation_changes/: webdataset-ddp-and-tracker.md
claude_docs/issues_and_todos/: check_whether_dataloading_is_bottleneck.md  followup-concerns-webdataset-and-ddp.md  webdataset_issue.md
claude_docs/potential_todos/: ddp_potential_speedups.md
drac_imagenet/: __init__.py
inference_app/: gpu_worker.py  types.py
sa1b/: bench_dataloader.py  bench_dataloader.sh  bench_nfs_vs_local.py  build_tar_indexes.sh  download.py  export_features.py  export_features.sh  plan_job.py  submit_export.sh  train.sh
scripts/: bench.py  bench_attention_fusion.py  bench_backbone_calling.py  bench_components.py  bench_dataloader.py  bench_interactive.py  bench_latency.py  bench_loaders.py  bench_overhead.py  build_shard_schedule.py  compare_storage_dtypes.py  download_sa1b.sh  eval_all_probes.sh  exp_position_decode.py  export_features.py  export_in21k_features.py  flops.py  infer_pca.py  inference_app.py  inference_multi_grid.py  inference_streamlit.py  inspect_ckpt.py  microbench_canvas_ops.py  normalization_analysis.py  profile_canvas_attention.py  profile_forward.py  prove_cross_process_variance.py  push_ablation_checkpoints.py  push_all_probes.py  run_all_policy_evals.sh  smoke_test_indexed.py  test_feature_dataset.py  train_ade20k_probe.py  train_ade20k_probe_v2.py  train_gaussian_recon.py  train_gaussian_search.py  train_scene_match.py  validate_features.py  verify_overhead_claim.py  viz_avp.py
scripts/dtype_accuracy_eval/: __init__.py  __main__.py
scripts/sa1b/: download.py
scripts/scan_failed/: __init__.py
scripts/train_scene_match/: __main__.py  config.py  data.py  model.py  scheduler.py  test.py  train.py  viz.py
scripts/validate_in1k/: __main__.py
slurm/: ade20k_probe.sbatch  env.sh  eval_ade20k.sbatch  eval_in1k_policy.sbatch  eval_in1k_sweep.sbatch  export_features.sh  interactive.sh  smoke_test.sh  test_array_resume.py  test_resume.sbatch  test_signal.py  test_signal.sbatch  train.sbatch
slurm/ablations/: baseline.sh  common.sh  dcan256.sh  dcan512.sh  no-fiid.sh  no-reads.sh  no-vpe.sh  qkvo-dcan256.sh  qkvo-dcan384.sh
slurm_jonathan/: train.sh  train_ddp.sbatch
slurm_nhr/: base_train.sbatch  env.sh  submit.sh  train-v100.sh  train_v100.sbatch
slurm_nhr/_legacy/: train-a100h100.sh  train.sbatch  train_ddp_v100.sbatch  train_v100_resubmit.sbatch
slurm_nhr/_legacy/exp17/: test_1gpu_sanity.sbatch  test_ddp_cleanup.sbatch  train_1gpu.sbatch  train_1gpu_foveated.sbatch  train_1gpu_reproduce.sbatch  train_2gpu.sbatch  train_2gpu_match1gpu.sbatch  train_4gpu.sbatch  train_4gpu_match1gpu.sbatch
slurm_nhr/_workspace/: allocate_workspace.sh  sync_to_workspace.sbatch  ws_extend.sh
slurm_nhr/exp17/: train_1gpu.sbatch  train_2gpu.sbatch  train_4gpu.sbatch  train_4gpu_match1gpu_foveated.sbatch
slurm_nhr/tmux_resubmit/: _README.md  check_and_submit.sh  start_watcher.sh  train_ddp_v100_tmux_resubmit.sbatch  train_v100_tmux_resubmit.sbatch
tests/: test_avp.py  test_dinov3.py
throwaway/: error_vs_glimpse_size.py  mps_grid_sample_bug.py  rope_bench.py
(+168 files in other folders)
