[project]
name = "canvit-pretrain"
version = "0.1.0"
description = "CanViT pretraining (passive-to-active dense distillation)"
authors = [{ name = "Yohaï-Eliel BERREBY", email = "me@yberreby.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvit-pytorch[fovi]",
    "dinov3",
    "dinov3-in1k-probes",
    "transformers>=4.50.0",
    "huggingface-hub",
    "safetensors",
    "comet-ml",
    "wandb",
    "tyro",
    "tqdm",
    "rich",
    "omegaconf",
    "dacite",
    "optuna",
    "pyarrow",
    "polars",
    "torchmetrics",
    "matplotlib",
    "xxhash",
    "opencv-python-headless>=4.13.0.90",
    "webdataset",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvit_pretrain"]

[tool.uv]
default-groups = ["dev", "cuda"]
# The cu126 (V100+A100) torch in the `cu126` group is a conflicting alternative
# to the default `cuda` (cu13x) torch, so uv keeps two separate locked
# resolutions instead of trying to reconcile them — same pattern as
# CanViT-specialize's cuda/TPU split. Build the V100 + A100 env with:
#   UV_PROJECT_ENVIRONMENT=.venv-cu126 uv sync --no-group cuda --group cu126
conflicts = [[{ group = "cuda" }, { group = "cu126" }]]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
# Local editable: picks up live edits in the sibling CanViT-PyTorch clone (fovi
# is pulled in transitively via canvit-pytorch[fovi], also editable). Assumes the
# 5 project repos are cloned side by side in one parent folder. Swap back to the
# remote fork —
# `canvit-pytorch = { git = "https://github.com/jonaden94/CanViT-PyTorch.git" }`
# — to install without the siblings present. See README "Local multi-repo setup".
canvit-pytorch = { path = "../CanViT-PyTorch", editable = true }
dinov3 = { git = "https://github.com/facebookresearch/dinov3.git", rev = "54694f7627fd815f62a5dcc82944ffa6153bbb76" }
dinov3-in1k-probes = { git = "https://github.com/m2b3/dinov3-in1k-probes.git" }
# cu126 group pulls torch/torchvision from the cu126 index (sm_70-compatible).
torch = [{ index = "pytorch-cu126", group = "cu126" }]
torchvision = [{ index = "pytorch-cu126", group = "cu126" }]

[dependency-groups]
dev = [
    "ipykernel",  # Jupyter kernel for notebooks (installed in both .venv and .venv-cu126)
    "basedpyright>=1.36.1",
    "ipython",
    "pypatree",
    "pytest>=9.0.2",
    "pytest-cov",
    "ruff>=0.15.0",
]
# Default GPU/CUDA path (H100, sm_90). torch lives here rather than in
# base dependencies so the cu126 V100+A100 variant can be a conflicting alternative.
cuda = [
    "torch>=2.10",
    "torchvision",
]
# V100 + A100 path: cu126 wheels, pinned for reproducibility (the working
# backup had torch 2.11.0 / torchvision 0.26.0). Installed only via:
#   UV_PROJECT_ENVIRONMENT=.venv-cu126 uv sync --no-group cuda --group cu126
cu126 = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["canvit_pretrain"]
python_files = ["test.py", "test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["throwaway", "misc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Sets torch._functorch.config before imports (required).
"canvit_pretrain/train/loop.py" = ["E402"]

[tool.basedpyright]
typeCheckingMode = "standard"
