[project]
name = "canvit"
version = "0.1.0"
description = "Canvas Cross-Attention ViT: resolution-decoupled vision transformer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "dinov3",
    "ybml",
]

[tool.uv.sources]
dinov3 = { git = "https://github.com/yberreby/dinov3.git", rev = "54694f7627fd815f62a5dcc82944ffa6153bbb76" }
ybml = { git = "https://github.com/yberreby/ybml.git", rev = "2f6af5c484bda0fd7b0ff0bd2ce73c546eff04b1" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100

[tool.basedpyright]
typeCheckingMode = "standard"
